2012-03-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed timecode calculation for (E)AC3 tracks
	if the source container (e.g. MPEG transport streams) only
	provided timecodes for some of the (E)AC3 packets itself.

2012-03-10  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.4.0.

2012-03-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed wrong calculation of the maximum number
	of ns per cluster in certain fringe cases if timecode scale was
	set to "auto" mode ("--timecode-scale -1"). Fix for bug 707.

2012-03-07  Moritz Bunkus  <moritz@bunkus.org>

	* build system: The C++ compiler must now support the C++11
	keyword 'nullptr'. configure checks for it. For GCC this means at
	least v4.6.0.

	* mkvinfo: new feature: mkvinfo will output the track ID that
	mkvmerge and mkvextract would use for a track. This information is
	shown alongside the "track number" element in verbose mode and in
	the track summary in summary mode.

	* mkvmerge, mmg: enhancement: The "--default-duration" in mkvmerge
	and the "FPS" drop down box in mmg now accept "p" or "i" as a unit
	-- as in e.g. "25p" or "50i". Several commonly used values have
	been added to mmg's "FPS" drop down box and others removed.

	* mkvmerge: bug fix: When using an external timecode file with
	AVC/h.264 video the default duration will be set to the most-often
	used duration in the timecode file.

	* mmg: enhancement: Added the values "50", "60" and "48000/1001"
	to the list of commonly used values for the "FPS" input field.

	* mkvmerge: bug fix: AVC/h.264 packetizer: The value given with
	"--default-duration" (after internal conversion from the unit
	given by the user to duration in nanoseconds) is now again
	interpreted as the duration of a frame and not of a field.

	* mkvmerge: bug fix: SRT subtitles: timecodes can contain the
	minus sign before any digit, not just before the first one.

2012-03-05  Moritz Bunkus  <moritz@bunkus.org>
