@@ -1,3 +1,10 @@
+2012-03-14  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: AVC/h.264 mkvmerge was wrongfully writing a
+	default duration of 60 frames/fields even if the source was
+	signalling 60000/1001 frames/fields. The frame timecodes have been
+	correct already.
+
 2012-03-12  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: Fixed timecode calculation for (E)AC3 tracks
